test/fixtures/fail/catchall_bangq_space.l4gs.g
; !? with space before param is invalid
calminstruction !? n&
  assemble n
end calminstruction
